# kbm

./: .dockerignore  .editorconfig  .gitignore  .kbm.yaml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yaml
.github/workflows/: ci.yaml  release.yaml  update-hooks.yaml
docker/: Dockerfile  docker-compose.dev.yaml  docker-compose.yaml  entrypoint.sh
docs/: chat_1.md  chat_2.md  chat_3.md  cli.md
scripts/: bootstrap.sh  check.sh  docker-entrypoint.sh  docs.sh  run.sh  setup.sh  test.sh  update.sh
src/app/: __init__.py  cli.py  config.py  engine.py  helpers.py  server.py
src/cli/: __init__.py  __main__.py  main.py
src/config/: __init__.py
src/engines/: __init__.py  base.py
src/engines/chat_history/: __init__.py  commands.py  tools.py
src/engines/rag_anything/: __init__.py  commands.py  tools.py
src/kbm/: __init__.py  __main__.py  auth.py  engine.py  models.py  schema.py  server.py
src/kbm/canonical/: __init__.py  models.py  store.py  wrapper.py
src/kbm/cli/: __init__.py  app.py  delete.py  helpers.py  init.py  inspect.py  list.py  start.py  status.py
src/kbm/config/: __init__.py  app_config.py  app_metadata.py  app_settings.py  auth_config.py  base.py  base_config.py  config.py  engine_config.py  memory_config.py  settings.py
src/kbm/engines/: __init__.py  base.py  base_engine.py  canonical.py  chat_history.py  federation.py  markdown.py  mcp_client.py  mem0.py  rag_anything.py  schema.py
src/kbm/mcp/: __init__.py  server.py  tools.py
src/kbm/store/: __init__.py  canonical.py  models.py  store.py
src/server/: __init__.py  core.py  mcp.py
tests/: __init__.py  conftest.py  test_canonical.py  test_chat_history.py  test_cli.py  test_config.py  test_helpers.py  test_markdown.py  test_mem0.py  test_server.py
