[project]
name = "kbm"
version = "0.2.0"
description = "Persistent memory for LLMs, accessible via MCP."
readme = "README.md"
license-files = ["LICENSE*"]

# MARK: - Dependencies

requires-python = ">=3.12"
dependencies = [
    "rich>=14.3",
    "typer>=0.21",
    "pydantic>=2.12",
    "pydantic-settings>=2.12",
    "python-dotenv>=1.2",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.22",  # Required for SQLite async support
    "fastmcp>=3.0.0b1", # REVIEW: Upgrade when stable release is available
    "raganything[all]", # Use latest stable release
]

[dependency-groups]
dev = [
    "pre-commit>=4.5",
    "pyright>=1.1",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.0",
    "ruff>=0.14",
]

# MARK: - Build System

[project.scripts]
kbm = "kbm.cli:main"

[build-system]
requires = ["uv_build>=0.9,<0.11"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["kbm"]

# MARK: - Tool Configuration

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "I", "W", "RUF"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
useLibraryCodeForTypes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["tests/*"]
